mobile and extra fixes

--- a/index.html
+++ b/index.html
@@ -282,41 +282,41 @@
           <div class="splide">
             <div class="splide__track">
               <ul class="splide__list">
-                <li class="splide__slide hero_rounded">
+                <li class="splide__slide hero_rounded hero_rounded_mobile">
                   <img
                     src="images/forkimages/platter2.jpg"
                     alt="Handmade Italian pasta and pizza in Södermalm Stockholm"
                   />
                 </li>
 
-                <li class="splide__slide hero_rounded">
+                <li class="splide__slide hero_rounded hero_rounded_mobile">
                   <img
                     src="images/forkimages/mainimage2.jpg"
                     alt="Family dining at Lil Italy Stockholm"
                   />
                 </li>
 
-                <li class="splide__slide hero_rounded">
+                <li class="splide__slide hero_rounded hero_rounded_mobile">
                   <img
                     src="images/forkimages/imgi_33_5a0e99d9-a091-432d-99a4-120dea179a6f.jpg"
                     alt="Fresh pasta and Italian wine Stockholm"
                   />
                 </li>
 
-                <li class="splide__slide hero_rounded">
+                <li class="splide__slide hero_rounded hero_rounded_mobile">
                   <img
                     src="images/forkimages/mainIMG.jpg"
                     alt="Italian restaurant dinner service Stockholm"
                   />
                 </li>
 
-                <li class="splide__slide hero_rounded">
+                <li class="splide__slide hero_rounded hero_rounded_mobile">
                   <img
                     src="images/forkimages/food 2.jpg"
                     alt="Authentic Italian lunch café Södermalm"
                   />
                 </li>
-                <li class="splide__slide hero_rounded">
+                <li class="splide__slide hero_rounded hero_rounded_mobile">
                   <img
                     src="images/forkimages/imgageimage3.jpg"
                     alt="Fresh espresso coffee at Lil Italy Södermalm"
@@ -510,7 +510,7 @@
             alt="Pizza and pasta Södermalm Stockholm"
           />
           <img
-            src="images/8Pizza and pasta Södermalm Stockholmcreenshot 2025-09-29 at 11.53.39 PM.png"
+            src="images/8gallery/Screenshot 2025-09-29 at 11.53.15 PM.png"
             alt="Pizza and pasta Södermalm Stockholm"
           />
           <img
