last changes for live

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       </section>
 
       <section class="" id="about">
-        <div class="hero-section hero-section-favourite">
+        <div class="hero-section hero-section-favourite hero-section-remix">
           <h2 class="p-3">
             YOUR NEW FAVORITE<br />CAFE, BISTRO, RESTAURANT AND BAR.
           </h2>
@@ -669,10 +669,9 @@
       </div>
 
       <div class="footer_bottom">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.instagram.com/lil_italyskanstull/?hl=en"
+          ><i class="fab fa-instagram"></i
+        ></a>
       </div>
     </footer>
 
